--- a/.htaccess
+++ b/.htaccess
@@ -5,11 +5,11 @@
 # Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /toppeq-website-cms/
+RewriteBase /toppeq-cms/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /toppeq-website-cms/index.php [L]
+RewriteRule . /toppeq-cms/index.php [L]
 </IfModule>
 
 # END WordPress
