--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 wp-content/plugins/wp-smtp
+wp-content/plugins/formidable-pro
 
 /.htaccess
 /license.txt
