--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 wp-content/plugins/wp-smtp
 wp-content/plugins/formidable-pro
+wp-content/plugins/atomic-blocks
+wp-content/plugins/wordpress-importer
 
 /.htaccess
 /license.txt
